fix misaligned icons

--- a/src/app/modules/shared/icons/components/icon/icon.component.scss
+++ b/src/app/modules/shared/icons/components/icon/icon.component.scss
@@ -6,7 +6,7 @@
 
 .checkmark {
   width: 14px;
-  height: 13.5px;
+  height: 13px;
   object-fit: contain;
 }
 
